--- a/app/views/partials/_alerts.html.haml
+++ b/app/views/partials/_alerts.html.haml
@@ -7,6 +7,6 @@
     
 - unless alert.nil?
   .alert.alert-warning.alert-dismissible.fade.show.my-3{:role => "alert"}
-    %stron Alerta:
+    %strong Alerta:
     = alert
     %button.close{"aria-label" =>"Close", "data-dismiss" => "alert", :type => "button"} ×
