--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,36 +1,34 @@
-.py-5.text-center{:style => "background-image: url('https://static.pingendo.com/cover-bubble-dark.svg');background-size:cover;"}
-  .container
-    .row
-      .mx-auto.col-md-6.col-10.bg-white.p-5.border-dark.border
-        %h2
-          Editar Perfil
-        = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-          = render "devise/shared/error_messages", resource: resource
+.row
+  .mx-auto.col-md-8.col-10.bg-white.p-5.border-dark.border{:style => "background-image: url('https://static.pingendo.com/cover-bubble-dark.svg');background-size:cover;"}
+    %h2
+      Editar Perfil
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = render "devise/shared/error_messages", resource: resource
 
-          .form-group
-            %br/
-            = f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"
-          - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-            %div
-              Currently waiting confirmation for: #{resource.unconfirmed_email}
-          .form-group
-            = f.text_field :name, class:"form-control", placeholder:"Nombre completo"
-          .form-group
-            = f.text_field :user_name, class:"form-control", placeholder:"Nombre de usuario"
-          .form-group
-            = f.password_field :password, autocomplete: "new-password", placeholder:"Nueva contraseña", class:"form-control"
+      .form-group
+        %br/
+        = f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %div
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .form-group
+        = f.text_field :name, class:"form-control", placeholder:"Nombre completo"
+      .form-group
+        = f.text_field :user_name, class:"form-control", placeholder:"Nombre de usuario"
+      .form-group
+        = f.password_field :password, autocomplete: "new-password", placeholder:"Nueva contraseña", class:"form-control"
 
-          .form-group
-            = f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirmar nueva contraseña", class:"form-control"
+      .form-group
+        = f.password_field :password_confirmation, autocomplete: "new-password", placeholder:"Confirmar nueva contraseña", class:"form-control"
 
-          .form-group
-            = f.password_field :current_password, autocomplete: "current-password", placeholder:"Contraseña actual", class:"form-control"
-          .actions
-          %small.form-text.text-muted.text-right
-            = link_to "Atrás", :back
-          = f.submit "Atualizar", class:"btn btn-primary"
-          .mt-4
-          %h3 Cancelar mi cuenta
-          %p
-            descontento? #{button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger"}
-          
+      .form-group
+        = f.password_field :current_password, autocomplete: "current-password", placeholder:"Contraseña actual", class:"form-control"
+      .actions
+      %small.form-text.text-muted.text-right
+        = link_to "Atrás", :back
+      = f.submit "Atualizar", class:"btn btn-primary"
+      .mt-4
+      %h3 Cancelar mi cuenta
+      %p
+        descontento? #{button_to "Cancelar mi cuenta", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger"}
+      
