--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,31 +1,44 @@
-= form_for @product do |f|
-  - if @product.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@product.errors.count, "error")} prohibited this product from being saved:"
-      %ul
-        - @product.errors.full_messages.each do |message|
-          %li= message
+.col-md-12
+  .container
+    .row.text-center.ml-5
+      .text-center.col-10
+        %h1.mb-6= title ||="Titulo"
+        %br
+        = form_for @product do |f|
+          - if @product.errors.any?
+            #error_explanation
+              %h2= "#{pluralize(@product.errors.count, "error")} prohibited this product from being saved:"
+              %ul
+                - @product.errors.full_messages.each do |message|
+                  %li= message
 
-  .field
-    = f.label :p_name
-    = f.text_field :p_name
-  .field
-    = f.label :p_description
-    = f.text_area :p_description
-  .field
-    = f.label :p_price
-    = f.text_field :p_price
-  .field
-    = f.label :p_quantify
-    = f.number_field :p_quantify
-  .field
-    = f.label :p_send
-    = f.text_field :p_send
-  .field
-    = f.label :p_available
-    = f.check_box :p_available
-  .field
-    = f.label :user
-    = f.text_field :user
-  .actions
-    = f.submit 'Save'
+          .form-group
+            /= f.label :p_name
+            = f.text_field :p_name, placeholder:"Nombre de producto", class:"form-control"
+          .form-group
+            /= f.label :p_description
+            = f.text_area :p_description, placeholder:"Descripsión del producto", class:"form-control"
+          .form-group
+            /= f.label :p_price
+            = f.text_field :p_price, placeholder:"Precio", class:"form-control"
+          .form-group
+            /= f.label :p_quantify
+            = f.number_field :p_quantify, placeholder:"Cantidad", class:"form-control"
+          .form-group
+            /= f.label :p_send
+            = f.text_field :p_send, placeholder:"Enviados", class:"form-control"
+          .form-group
+            /= f.label :user
+            = f.text_field :user, placeholder:"Usuario", class:"form-control"
+          .text-right
+            = f.label :p_available
+            = f.check_box :p_available  
+          .text-right  
+            - Category.all.each do |category|
+              = category.name
+              = check_box_tag "categories[]", category.id
+          .text-right
+            = link_to "Atrás", home_admin_path
+          %br           
+          .actions
+            = f.submit 'Confirmar', class:"btn btn-primary"
