--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,33 +1,59 @@
-%h1 Listing products
+.card-header.text-center
+  %h2 Administrar
+  .table-responsive
+    %table.table
+      %thead.text-center
+        %tr
+          %th Nombre
+          %th Descripción
+          %th Acciones
+      %tbody.text-center
+        - @products.each do |product|
+          %tr
+            %td= product.p_name
+            %td= truncate product.p_description, length: 40
+            %td
+              = link_to edit_product_path(product), class:"btn btn-primary mx-2" do
+                %i.fa.fa-fw.fa-cog
+              = link_to product, method: :delete, data: { confirm: "Estas seguro?" }, class:"btn btn-primary mx-2" do
+                %i.fa.fa-fw.fa-trash-o
+              = link_to product, class:"btn btn-primary mx-2" do
+                %i.fa.fa-fw.fa-eye
 
-%table
-  %thead
-    %tr
-      %th P name
-      %th P description
-      %th P price
-      %th P quantify
-      %th P send
-      %th P available
-      %th User
-      %th
-      %th
-      %th
 
-  %tbody
-    - @products.each do |product|
+
+
+
+-#%h1 Listing products
+
+  %table
+    %thead
       %tr
-        %td= product.p_name
-        %td= product.p_description
-        %td= product.p_price
-        %td= product.p_quantify
-        %td= product.p_send
-        %td= product.p_available
-        %td= product.user
-        %td= link_to 'Show', product
-        %td= link_to 'Edit', edit_product_path(product)
-        %td= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
+        %th P name
+        %th P description
+        %th P price
+        %th P quantify
+        %th P send
+        %th P available
+        %th User
+        %th
+        %th
+        %th
 
-%br
+    %tbody
+      - @products.each do |product|
+        %tr
+          %td= product.p_name
+          %td= product.p_description
+          %td= product.p_price
+          %td= product.p_quantify
+          %td= product.p_send
+          %td= product.p_available
+          %td= product.user
+          %td= link_to 'Show', product
+          %td= link_to 'Edit', edit_product_path(product)
+          %td= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }
 
-= link_to 'New Product', new_product_path
+  %br
+
+  = link_to 'New Product', new_product_path
