--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -17,7 +17,7 @@
             = f.text_field :name, placeholder:"Nombre de categoría", class:"form-control"
           .form-group
             /= f.label :description
-            = f.text_field :description, placeholder:"Descripción", class:"form-control"
+            = f.text_area :description, placeholder:"Descripción", class:"form-control"
           .form-group
             /= f.label :c_img
             = f.file_field :c_img, placeholder:"", class:"form-control"
