--- a/app/views/home/admin.html.haml
+++ b/app/views/home/admin.html.haml
@@ -1,11 +1,12 @@
-.card-header.text-center
-  %h2 Administrar
-.row
-  .col-md-3{:style => ""}
-    = link_to "Categorías", categories_path, class:"btn btn-primary btn-block"
-  .col-md-3{:style => ""}
-    = link_to "Nueva categoría", new_category_path, class:"btn btn-primary btn-block"
-  .col-md-3{:style => ""}
-    = link_to "Productos", products_path, class:"btn btn-primary btn-block"
-  .col-md-3{:style => ""}
-    = link_to "Nuevo producto", new_product_path, class:"btn btn-primary btn-block"
+- if user_signed_in? && current_user.is_admin?
+  .card-header.text-center
+    %h2 Administrar
+  .row
+    .col-md-3{:style => ""}
+      = link_to "Categorías", categories_path, class:"btn btn-primary btn-block"
+    .col-md-3{:style => ""}
+      = link_to "Nueva categoría", new_category_path, class:"btn btn-primary btn-block"
+    .col-md-3{:style => ""}
+      = link_to "Productos", products_path, class:"btn btn-primary btn-block"
+    .col-md-3{:style => ""}
+      = link_to "Nuevo producto", new_product_path, class:"btn btn-primary btn-block"
