--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,12 +6,14 @@
         %tr
           %th Nombre
           %th Descripción
+          %th Imagen
           %th Acciones
       %tbody.text-center
         - @products.each do |product|
           %tr
             %td= product.p_name
             %td= truncate product.p_description, length: 40
+            %td= link_to "Añadir", new_product_myimage_path(product)
             %td
               = link_to edit_product_path(product), class:"btn btn-primary mx-2" do
                 %i.fa.fa-fw.fa-cog
