--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -6,25 +6,30 @@
           %h1.text-center= @product.p_name
           #carouselExampleIndicators.carousel.slide{"data-ride" => "carousel"}
             %ul.carousel-indicators
-              - flag = false
-              - cont = 0
-              - @product.myimages.ids.each do |con|
-                - if flag
-                  %li{"data-slide-to" => "#{cont}", "data-target" => "#carouselExampleIndicators"}
-                - else  
-                  %li.active{"data-slide-to" => "#{cont}", "data-target" => "#carouselExampleIndicators"}
-                  - flag = true
-                - cont = cont + 1
+              .row
+                - flag = false
+                - cont = 0
+                - @product.myimages.ids.each do |con|
+                  - if flag
+                    %li{"data-slide-to" => "#{cont}", "data-target" => "#carouselExampleIndicators"}
+                  - else  
+                    %li.active{"data-slide-to" => "#{cont}", "data-target" => "#carouselExampleIndicators"}
+                    - flag = true
+                  - cont = cont + 1
             .carousel-inner
               - flag = false
               -@product.myimages.each do |image|
                 - if flag  
                   .carousel-item
                     = image_tag image.img.url(:medium),class:"d-block w-100  img-fluid"
+                    .text-center
+                      = render "buttons",img:image
                 - else
                   .carousel-item.active
                     = image_tag image.img.url(:medium),class:"d-block w-100  img-fluid"
                     - flag = true
+                    .text-center
+                      = render "buttons",img:image
             %a.carousel-control-prev{"data-slide" => "prev", :href => "#carouselExampleIndicators", :role => "button"}
               %span.carousel-control-prev-icon{"aria-hidden" => "true"}
               %span.sr-only Previous
