--- a/app/views/partials/_navbar.html.haml
+++ b/app/views/partials/_navbar.html.haml
@@ -25,6 +25,9 @@
         = text_field_tag "find", nil, html: { require:true }, placeholder:"Buscar", class:"form-control mr-sm-0 mx-1"   
         %button.btn.btn-primary{:type => "submit"} 
           %i.fa.fa-search 
+      = link_to home_car_path, class: "btn btn-default navbar-btn mx-1 btn-primary py-1" do
+        %i.fa.fa-fw.fa_shopping-cart.fa.lg#mycart.text-white
+          = @shopping_cart.products.count
 
       %div
       - if user_signed_in?
