--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,7 +21,8 @@
                 %i.fa.fa-fw.fa-trash-o
               = link_to product, class:"btn btn-primary mx-2" do
                 %i.fa.fa-fw.fa-eye
-
+  .flickr_pagination              
+    = will_paginate @products
 
 
 
