--- a/app/views/home/purchases.html.haml
+++ b/app/views/home/purchases.html.haml
@@ -1,1 +1,12 @@
-
+.container
+  .row
+    .col-md-9
+      .card.p-2
+        .card-body
+          %h1.mb-3.text-center.text-capitalize= params[:action]
+          %h3.mb-2.text-center Productos
+          %ul.list-group
+            - @payments.each do |pay|
+              %li.list-group-item.d-flex.justify-content-between.align-items-center
+                %p="Compra #{pay.paypal_id}"
+                =link_to "Ver más", payment_path(pay),class:"btn btn-warning"
